"RMI and networking working"